Added Java bindings for C